Fixed overflow issue on login page
Its the little things :kissing_heart:

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,6 +207,8 @@ background: #ccc;
 
     padding: 0;
     margin: 0;
+
+    overflow-x: hidden;
 }
 .entrance-background-absolute {
     position: absolute;
@@ -215,8 +217,10 @@ background: #ccc;
 
     z-index: -1;
     
-    width: 75vh;
-    height: 75vh;
+    /* width: 75vh; */
+    /* height: 85vh; */
+    width: 100%;
+    height: 85vh;
 
     
     padding: 0;
